[package]
name = "iced_backend"
version = "0.1.0"
authors = ["arctic-alpaca <67190338+arctic-alpaca@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotters-backend = "^0.3.0"
iced = { path = "../iced", features = ["canvas"] }

[dev-dependencies]
plotters = {version = "^0.3.0", default_features = false}